TODO for this release
 * Complete rdoc documentation
 * Profiling and some optimisations
 * Multicolumn legends (and specification)

ggplot 0.6
----------------------------------------
  
  * it's now easy to change the default scales (and their arguments) with the set_default_scale function, see ?set_default_scale for more details (thanks to Bob Muenchen for the suggestion)
  * new order aesthetic which controls the order in which elements are plotted
  * min and max are now scaled the same way as y
  * functions are silently dropped (e.g. aes(colour=col))

  * coord_polar: add start and direction parameters, giving more control over the layout of the polar coords
  * coord_polar: added my favourite pie chart example
  * coord_trans now deals with groups appropriately, at the cost of decreased speed
  * geom_abline, geom_vline, geom_hline: should now behave better in a wider variety of settings
  * geom_crossbar: the middle line is now display thicker than the other lines, controlled by the parameter fatten (thanks to Heike Hofmann for the suggestion)
  * geom_density: fix scale adjustment bug in geom_density
  * geom_line, geom_text: all size measurements (now lines and text as well) are measured in mm, lines/paths default to paths 0.5mm wide
  * geom_rug: new to add marginal rug plots
  * geom_smooth: fixed bug where if se=FALSE x axis always includes 0
  * qplot: allow qplot to use computed aesthetics too
  * scale_discrete: all discrete scales now have labels argument which you can use to override the factor levels
  * scale_size: legends resize to avoid overlaps
  * scale_discrete: now works correctly with character vectors
  * scale_x_continuous, scale_y_continuous: new convenience functions xlim and ylim (and zlim) that make it even easier to adjust the limits of the x, y, and z axes
  * stat_bin, geom_area: fixed bug in combination of stat_bin and geom_area that made it difficult to draw frequency polygons