@@ -70,6 +70,11 @@ GeomBoxplot <- proto(GeomInterval, {
     m + geom_boxplot() + coord_trans(y="log10")
     m + geom_boxplot() + scale_y_log10() + coord_trans(y="log10")
     
+    # Boxplots with continuous x
+    qplot(year, budget, data=movies, geom="boxplot")
+    qplot(year, budget, data=movies, geom="boxplot", group=year)
+    qplot(year, budget, data=movies, geom="boxplot", group=round_any(year, 10, floor))
+    
     # Use qplot instead
     qplot(factor(cyl), mpg, data=mtcars, geom="boxplot")
     qplot(factor(cyl), mpg, data=mtcars, geom="boxplot") + coord_flip()
